objects/agf__ADM_GUS_Exception__c.object
<CustomObject>
    <description>Used to store run time exceptions since the platform does not provide persistent log files</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Data_Capture__c</fullName>
        <label>Data Capture</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>GUS Exception</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Data_Capture__c</columns>
        <columns>agf__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GUS Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>